--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Your Task",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,5 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SoftPoachedEggs/Note-Taker-Build.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SoftPoachedEggs/Note-Taker-Build/issues"
+  },
+  "homepage": "https://github.com/SoftPoachedEggs/Note-Taker-Build#readme"
 }
